--- a/UI/res/layout/image_gridview_layout.xml
+++ b/UI/res/layout/image_gridview_layout.xml
@@ -32,13 +32,13 @@
             android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/iv_button_index"
+            android:id="@+id/iv_button_upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:scaleType="fitXY"
             android:layout_marginRight="20dp"
-            android:background="@drawable/icon_home"
+            android:background="@drawable/icon_upload"
             android:layout_centerVertical="true" />
     </RelativeLayout>
     
