--- a/UI/res/values/styles.xml
+++ b/UI/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -14,12 +14,14 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-		<item name="android:windowBackground">@drawable/bg_sp</item>  
-		<item name="android:windowNoTitle">true</item>          
+		
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <!-- Application theme. -->
 
+	<style name="SpalshStyle" parent="android:Theme.Light">
+	    <item name="android:background">@drawable/bg</item>
+	</style>
 
     <!-- 项目缺省样式 -->
     <style name="soul_smart_school_theme_default" parent="@android:style/Theme">
