--- a/UI/res/layout/comments_list_item_layout.xml
+++ b/UI/res/layout/comments_list_item_layout.xml
@@ -5,13 +5,14 @@
     android:background="@color/white" >
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/txtCommentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="3"
         android:text="你好，很高兴能看到你的照片，很漂亮，已经点了个赞。"
         android:textColor="@color/black"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <ImageView
         android:id="@+id/ivHead"
