--- a/UI/res/values/styles.xml
+++ b/UI/res/values/styles.xml
@@ -107,4 +107,13 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+       <style name="style_defaule_width2match_height2wrap">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+        <style name="style_defaule_width2wrap_height2wrap">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
