--- a/UI/res/layout/activity_login_and_register.xml
+++ b/UI/res/layout/activity_login_and_register.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_person" >
+    android:background="@color/white" >
 
     <FrameLayout
         android:id="@+id/companyIcon"
@@ -12,11 +12,11 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/outter" >
 
-        <ImageView
+        <com.soul.project.application.view.CircleImageView
             android:layout_width="@dimen/login_and_register_top_imagetip_inner_size"
             android:layout_height="@dimen/login_and_register_top_imagetip_inner_size"
             android:layout_gravity="center"
-            android:background="@drawable/inner" />
+            android:src="@drawable/test2" />
     </FrameLayout>
 
     <LinearLayout
@@ -62,7 +62,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/login_and_register_center_margin_top"
         android:text="@string/string_thirder_login"
-        android:textColor="@android:color/darker_gray" />
+        android:textColor="@color/sea_blue" />
 
     <LinearLayout
         android:layout_width="match_parent"
